--- a/src/main/resources/fxml/reservation.fxml
+++ b/src/main/resources/fxml/reservation.fxml
@@ -1,42 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="236.0" prefWidth="339.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="270.0" prefWidth="444.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.4000244140625" minWidth="10.0" prefWidth="119.60004425048828" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="495.20001220703125" minWidth="10.0" prefWidth="189.39995574951172" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="108.79999389648438" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="169.60000000000002" minHeight="10.0" prefHeight="72.20000381469727" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="173.39999999999998" minHeight="10.0" prefHeight="57.79999618530273" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="147.40001525878904" minHeight="10.0" prefHeight="72.59999999999997" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="122.40001525878904" minHeight="10.0" prefHeight="74.19999999999999" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Datum dolaska: " GridPane.rowIndex="1">
+      <Label text="Datum dolaska: " GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Label>
-      <Label text="Datum odlaska: " GridPane.rowIndex="2">
+      <Label text="Datum odlaska: " GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Label>
-      <Button fx:id="btnRezervisi" mnemonicParsing="false" onAction="#roomReservation" prefHeight="26.0" prefWidth="127.0" text="Rezerviši" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-      <Label text="Broj sobe: ">
+      <Button fx:id="btnRezervisi" mnemonicParsing="false" onAction="#roomReservation" prefHeight="26.0" prefWidth="127.0" text="Rezerviši" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+      <Label text="Broj sobe: " GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
@@ -44,7 +40,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </Label>
-      <TextField fx:id="roomNumberId" maxWidth="-Infinity" prefHeight="27.0" prefWidth="184.0" GridPane.columnIndex="1">
+      <TextField fx:id="roomNumberId" maxWidth="-Infinity" prefHeight="27.0" prefWidth="184.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
@@ -52,7 +48,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </TextField>
-      <DatePicker fx:id="arrivalDateId" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <DatePicker fx:id="arrivalDateId" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
@@ -60,7 +56,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </DatePicker>
-      <DatePicker fx:id="departudeDateId" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <DatePicker fx:id="departudeDateId" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
